Made it so that the appropriate feedback is appended to the correct answers Also created a new css class .answer_box giving it to the div tag wrapped around the .answers

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -38,8 +38,12 @@ body{
 	margin-bottom:2px;
 }
 
-.answer{
+.answer_box{
 	font-size:1.3em;
+}
+
+.answer{
+	
 }
 
 .feedback{
